# suji-asr

./: .gitignore  BENCHMARK.md  CLAUDE.md  CMakeLists.txt  LICENSE  PROGRESS.md  README.md  RELEASE_NOTES.md  RUNLOG.md  WAKEUP.md
.superpowers/sdd/: hetero-H0-report.md  hetero-H3-report.md
cmake/: SujiPaths.cmake
docs/superpowers/plans/: 2026-06-25-phase1-suji-core-cli.md  2026-06-25-phase2-batch-engine.md  2026-06-26-cancel-aware-decode-vad.md  2026-06-26-fp16-model-research.md  2026-06-26-gui-overhaul-mission.md  2026-06-26-hetero-engine-and-todos-mission.md  2026-06-26-live-progress-fix.md  2026-06-26-performance-optimization-mission.md  2026-06-26-phase3-orchestrator.md  2026-06-26-phase5-qt-gui.md  2026-06-26-todo-batch4-config-subtitle.md
docs/superpowers/specs/: 2026-06-25-suji-asr-design.md
installer/: README.md  suji.iss
models/: lecture_hotwords_zh.txt
scripts/: benchmark.ps1  build_installer.ps1  itn_compare.py
src/cli/: batch_main.cpp  main.cpp
src/core/: asr.cpp  asr.h  batch_engine.cpp  batch_engine.h  batch_form.h  bounded_queue.h  cancel.h  config.h  hardware.cpp  hardware.h  log.cpp  log.h  media_decode.cpp  media_decode.h  oom_retry.h  paths.cpp  paths.h  pipeline.cpp  pipeline.h  punctuation.cpp  punctuation.h  resume.cpp  resume.h  segment_merge.cpp  segment_merge.h  timestamp.cpp  timestamp.h  types.h  utf8_file.cpp  utf8_file.h  vad.cpp  vad.h
src/core/output/: json_writer.cpp  json_writer.h  md_writer.cpp  md_writer.h  srt_writer.cpp  srt_writer.h  vtt_writer.cpp  vtt_writer.h  writer_facade.cpp  writer_facade.h
src/gui/: engine_worker.cpp  engine_worker.h  main.cpp  main_window.cpp  main_window.h
tests/: test_autotune.cpp  test_bounded_queue.cpp  test_cancel.cpp  test_cli_numeric_args.cpp  test_config_fields.cpp  test_default_output_base.cpp  test_gui_file_progress.cpp  test_gui_log_phase.cpp  test_gui_resume_partition.cpp  test_gui_row_output_dir.cpp  test_hetero_engine.cpp  test_hotwords_csv.cpp  test_json_writer.cpp  test_log_sink.cpp  test_md_writer.cpp  test_oom_retry.cpp  test_paths.cpp  test_pipeline_punct_log.cpp  test_probe_duration.cpp  test_recursive_dir.cpp  test_resume.cpp  test_sanity.cpp  test_segment_merge.cpp  test_srt_writer.cpp  test_stem_dedup.cpp  test_timestamp.cpp  test_utf8_file.cpp  test_vtt_writer.cpp  test_writable_fallback.cpp  test_write_outputs.cpp
tests/integration/: test_asr.cpp  test_batch_asr.cpp  test_batch_engine.cpp  test_cli_e2e.cpp  test_hardware.cpp  test_hetero_engine_e2e.cpp  test_hetero_smoke.cpp  test_media_decode.cpp  test_pipeline_e2e.cpp  test_punct.cpp  test_vad.cpp
